--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -170,7 +170,7 @@ Ingredientes:
 
 ## Masa de pizza
 
-Ingredientes:
+Ingredientes para la masa:
 
 - 20 g de aceite de oliva virgen extra (y un poco más para engrasar)
 - 400 g de harina de fuerza (y un poco más para espolvorear)
@@ -180,6 +180,21 @@ Ingredientes:
 - 400 g de harina de fuerza
 - 20 g de aceite de oliva virgen extra
 - 1 cucharadita de sal
+
+Ingredientes para la pizza simple:
+
+- Mozzarella fresca
+- Tomate natural
+- Albahaca
+- Sal
+- Aceite
+
+Ingredientes para la pizza barbacoa:
+
+- Bacon curado
+- Cebolla
+- Barbacoa
+- Maíz
 
 Amasar:
 
@@ -220,7 +235,7 @@ Procedimiento:
 Ingredientes:
 
 - 150g (1 taza) harina
-- 200ml de agua caliente , tap water (200g) (Note 1)
+- 200ml de agua caliente
 - 1/2 cucharada de sal
 - 1/2 cucharada de white sugar.
 - 1 cucharada de polvo para hornear o levadura química (baking powder).
@@ -229,9 +244,9 @@ Ingredientes:
 
 Pasos:
 
-- Cocinar durante 1'5 minutos a fuego medio.
+- Cocinar durante 1,5 minutos a fuego medio.
 - Cocinar durante 1 minuto a fuego medio bajo.
-- Cocinar durante 2'5 a 4 minutos a fuego bajo.
+- Cocinar durante 2,5 a 4 minutos a fuego bajo.
 - Darle la vuelta.
 - Cocinar durante 20 a 30 segundos.
 
@@ -251,7 +266,7 @@ Ingredientes:
 Lecciones aprendidas:
 
 - Personalmente prefiero caramelizar la cebolla a parte para poder ponerlo a fuego más bajo.
-- En lugar de freir las patatas podemos meterlas al horno a 150 grados durante 20 - 30 min.
+- En lugar de freír las patatas podemos meterlas al horno a 150 grados durante 20 - 30 min.
 
 ## Bacalao al horno fácil
 
@@ -293,6 +308,22 @@ Lecciones aprendidas:
 ## Albóndigas en salsa española
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CN-u-fKDt8U?si=SmAVxqHoyRUuWI3t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+Ingredientes:
+
+- 500g de carne picada de ternera
+- 500g de carne picada de cerdo
+- 1 rebanada de pan de molde sin corteza y mojada en leche
+- 2 huevos
+- 3 dientes de ajo
+- 1 puñadito de perejil picado
+- 100g de queso parmesano o manchego
+- 1/2 de cucharadita de comino molido
+- harina
+- 1 vaso de vino blanco
+- 2 vasos de caldo de carne
+- aceite
+- sal y pimienta
 
 ## Ternera a la plancha
 
@@ -375,36 +406,7 @@ Ingredientes para 4 personas:
 - sal y pimienta
 - aceite
 
-## Masa de Pizza
-
 ## Otras cosas
-
-### Compras
-
-| Ingrediente                    | Mercadona | Lidl | Carrefour | BonArea | Eroski |
-| ------------------------------ | --------- | ---- | --------- | ------- | ------ |
-| Tomate frito                   | ⇧         |      |           |         |        |
-| Tomate en lata                 | ⇧         | X    | X         |         | X      |
-| Pan brioche                    | X         |      |           |         | X      |
-| Anchoas en aceite              | X         |      |           |         |        |
-| Kefir                          | X         |      | X         | X       |        |
-| Chipirones                     | X         |      | X         |         |        |
-| Gambones                       | X         | X    | X         |         |        |
-| Pan tostado integral           | X         |      |           |         | X      |
-| Pescado                        | X         |      | X         |         |        |
-| Maíz                           | ⇧         | X    | X         |         |        |
-| Huevos                         | X         | X    |           |         |        |
-| Cottage cheese                 |           | X    |           |         |        |
-| Yogurt                         | ⇧         | X    |           |         |        |
-| Berlina choco blanco           | X         | ⇧    |           |         |        |
-| Café bio                       |           | ⇧    |           |         |        |
-| Descuento por pronta caducidad |           |      | 50%       |         |        |
-| Polenta                        |           |      | X         |         |        |
-| Jamón serrano                  | X         |      |           |         |        |
-| Pollo                          | X         | X    | X         | ⇧       |        |
-| Mozzarella fresca              | X         | X    | X         |         |        |
-| Harina                         | X         | X    | X         |         |        |
-| Sal marina                     | X         | X    | X         |         |        |
 
 ### Horno
 
@@ -459,7 +461,7 @@ Enciende o apaga la iluminación interior.
 
 ### Sartenes para toda la vida
 
-Si queremos tener sartenes para toda la vida podemos optar por sartenes de acero inoxidable. Se puede hacer de todo en ellas pero hay que saber utilizarlas. Eso sí, normalmente se tarda más en cocinar.
+Si queremos tener sartenes para toda la vida podemos optar por sartenes de **acero inoxidable**. Se puede hacer de todo en ellas pero hay que saber utilizarlas. Eso sí, normalmente se tarda más en cocinar que en una de teflón.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ybpgsIkBtOA?si=1tffZ7KxXLv-uh6O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -468,6 +470,8 @@ Si queremos tener sartenes para toda la vida podemos optar por sartenes de acero
 ### Cuchillos y afilado
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sJp569u3WKc?si=tbeiLpT3kXMmzgER" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ffU2XktACSw?si=m9GFW9UfNoBnia7I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Bibliografía
 
