--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -406,6 +406,20 @@ Ingredientes para 4 personas:
 - sal y pimienta
 - aceite
 
+## Reuperar pan duro
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KbgmXaWiv0E?si=ZWBhO66_LpqYAr9t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+Instrucciones:
+
+- Precalentamos el horno a 230ºC.
+- Echamos un chorro de agua por la corteza del pan por arriba y por abajo.
+- Metemos el pan en el horno durante 5 minutos.
+
+Lecciones aprendidas:
+
+- No mojar la miga con el agua.
+
 ## Otras cosas
 
 ### Horno
