--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -39,6 +39,7 @@ xsi:noNamespaceSchemaLocation="marcadores.xsd">
    </pagina>
 </marcadores>
 ```
+{: file="marcadores.xml" }
 
 - Para vincular un esquema a un documento XML, es obligatorio que este último haga referencia al espacio de nombres `http://www.w3.org/2001/XMLSchema-instance`. Para ello, habitualmente se utiliza el prefijo `xsi`.
 - El atributo `noNamespaceSchemaLocation` permite referenciar a un archivo con la definición de un esquema que no tiene ningún espacio de nombres asociado. En este caso, dicho archivo es `marcadores.xsd`{: .filepath}.
@@ -65,6 +66,7 @@ El esquema XML guardado en `marcadores.xsd`{: .filepath} y que permita validar e
   </xs:element>
 </xs:schema>
 ```
+{: file="marcadores.xsd" }
 
 Para estar bien formado, un esquema XML tiene que cumplir las mismas reglas de sintaxis que cualquier otro documento XML.
 
@@ -109,6 +111,7 @@ xmlns:mar="http://www.abrirllave.com/marcadores">
    </mar:pagina>
 </mar:marcadores>
 ```
+{: file="marcadores.xml" }
 
 En el atributo `schemaLocation` se pueden escribir parejas de valores:
 
@@ -143,6 +146,7 @@ elementFormDefault="qualified">
   </xs:element>
 </xs:schema>
 ```
+{: file="marcadores.xsd" }
 
 - En el atributo `targetNamespace` se está indicando que los elementos definidos en este esquema (`marcadores`, `página`, `nombre`, `descripción` y `url`), provienen del espacio de nombres `http://www.abrirllave.com/marcadores`.
 - `xmlns="http://www.abrirllave.com/marcadores"` especifica que este es el espacio de nombres por defecto.
@@ -269,6 +273,7 @@ xmlns:mar="http://www.abrirllave.com/marcadores">
    </pagina>
 </mar:marcadores>
 ```
+{: file="marcadores.xml" }
 
 - `unqualified` es el valor por defecto del atributo `elementFormDefault`.
 
@@ -299,6 +304,7 @@ xmlns="http://www.abrirllave.com/marcadores">
    </pagina>
 </marcadores>
 ```
+{: file="marcadores.xml" }
 
 Ahora, ningún elemento lleva prefijo, al igual que el espacio de nombres al que pertenecen: `xmlns="http://www.abrirllave.com/marcadores"`
 
@@ -343,6 +349,7 @@ xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
    </url>
 </urlset>
 ```
+{: file="sitemap.xml" }
 
 Al visualizar en un navegador web el código fuente del archivo `sitemap.xsd`{: .filepath} ubicado en:
 
@@ -630,6 +637,7 @@ xsi:noNamespaceSchemaLocation="fichas.xsd">
    </ficha>
 </fichas>
 ```
+{: file="fichas.xml" }
 
 Y el archivo `fichas.xsd`{: .filepath} que permite validarlo:
 
@@ -674,6 +682,7 @@ Y el archivo `fichas.xsd`{: .filepath} que permite validarlo:
 
 </xs:schema>
 ```
+{: file="fichas.xsd" }
 
 - Obsérvese que, `infoPersonaAmpliada` se basa en `infoPersona`, añadiéndole dos elementos: `ciudad` y `país`.
 - En cuanto a `xs:complexContent`, sirve para definir restricciones o extensiones a un tipo complejo (`complexType`).
@@ -705,6 +714,7 @@ EJEMPLO El siguiente archivo `precios.xsd`{: .filepath}:
   </xs:element>
 </xs:schema>
 ```
+{: file="precios.xsd" }
 
 Permite validar el siguiente documento XML:
 
@@ -717,6 +727,7 @@ xsi:noNamespaceSchemaLocation="precios.xsd">
    <precio moneda="Libra esterlina">4.3</precio>
 </precios>
 ```
+{: file="precios.xml" }
 
 - Nótese que, utilizando `xs:extension`, al elemento `precio` se le ha incorporado el atributo `moneda`.
 
@@ -880,6 +891,7 @@ El código del archivo `paises.xsd`{: .filepath} que permita validar `paises.xml
   </xs:element>
 </xs:schema>
 ```
+{: file="paises.xsd" }
 
 {:.subsection}
 ### Indicadores de grupo (xs:group, xs:attributeGroup)
@@ -906,6 +918,7 @@ xsi:noNamespaceSchemaLocation="personas.xsd">
    </persona>
 </personas>
 ```
+{: file="personas.xml" }
 
 Y el archivo `personas.xsd`{: .filepath} que permite validarlo:
 
@@ -939,6 +952,7 @@ Y el archivo `personas.xsd`{: .filepath} que permite validarlo:
 
 </xs:schema>
 ```
+{: file="personas.xsd" }
 
 - Obsérvese que, se ha definido el grupo `datosBasicos`, el cual ha sido incorporado a la definición del tipo complejo `datosDePersona`.
 
@@ -979,6 +993,7 @@ Se puede escribir el siguiente código en el archivo `personas.xsd`{: .filepath}
 
 </xs:schema>
 ```
+{: file="personas.xsd" }
 
 - En este caso, se ha definido el grupo de atributos `datosDePersona`, el cual ha sido incorporado a la definición del elemento `persona`.
 
