--- a/_posts/2022-01-30-binario.md
+++ b/_posts/2022-01-30-binario.md
@@ -27,7 +27,6 @@ Más información el artículo [¿Qué son los números binarios y por qué los 
   </div>
 </details>
 
-
 {:.section}
 ## Binario a decimal
 
@@ -40,10 +39,10 @@ Más información el artículo [¿Qué son los números binarios y por qué los 
 ### Números de 1 bit
 
 | 2<sup>0</sup> |  |
-| 1 | Decimal |
-|:---:|:---:|
-| 0 | 0 |
-| 1 | 1 |
+|   1   | Decimal |
+| :---: | :-----: |
+|   0   |    0    |
+|   1   |    1    |
 
 Como podemos observar, con palabras de 1 bit podemos representar un total de 2<sup>1</sup> (2) números, cuyo rango va de 0 a 1.
 
@@ -51,12 +50,12 @@ Como podemos observar, con palabras de 1 bit podemos representar un total de 2<s
 ### Núemeros de 2 bits
 
 | 2<sup>1</sup> | 2<sup>0</sup> |  |
-| 2 | 1 | Decimal |
-|:---:|:---:|:---:|
-| 0 | 0 | 0 |
-| 0 | 1 | 1 |
-| 1 | 0 | 2 |
-| 1 | 1 | 3 |
+|   2   |   1   | Decimal |
+| :---: | :---: | :-----: |
+|   0   |   0   |    0    |
+|   0   |   1   |    1    |
+|   1   |   0   |    2    |
+|   1   |   1   |    3    |
 
 Como podemos observar, con palabras de 2 bits podemos representar un total de 2<sup>2</sup> (4) número, cuyo rango va de 0 a 3.
 
@@ -64,16 +63,16 @@ Como podemos observar, con palabras de 2 bits podemos representar un total de 2<
 ### Números de 3 bits
 
 | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |  |
-| 4 | 2 | 1 | Decimal |
-|:---:|:---:|:---:|:---:|
-| 0 | 0 | 0 | 0 |
-| 0 | 0 | 1 | 1 |
-| 0 | 1 | 0 | 2 |
-| 0 | 1 | 1 | 3 |
-| 1 | 0 | 0 | 4 |
-| 1 | 0 | 1 | 5 |
-| 1 | 1 | 0 | 6 |
-| 1 | 1 | 1 | 7 |
+|   4   |   2   |   1   | Decimal |
+| :---: | :---: | :---: | :-----: |
+|   0   |   0   |   0   |    0    |
+|   0   |   0   |   1   |    1    |
+|   0   |   1   |   0   |    2    |
+|   0   |   1   |   1   |    3    |
+|   1   |   0   |   0   |    4    |
+|   1   |   0   |   1   |    5    |
+|   1   |   1   |   0   |    6    |
+|   1   |   1   |   1   |    7    |
 
 Como podemos observar, con palabras de 3 bits podemos representar un total de 2<sup>3</sup> (8) números, cuyo rango va de 0 a 7.
 
@@ -81,10 +80,10 @@ Como podemos observar, con palabras de 3 bits podemos representar un total de 2<
 ### Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
-|   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
-|---|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|---|
-| Ej. 1 | 0 | 0 | 0 | 0 | 1 | 0 | 0 | 1 | 9 |
-| Ej. 2 | 1 | 1 | 0 | 0 | 1 | 1 | 0 | 0 | 204 |
+|       |  128  |  64   |  32   |  16   |   8   |   4   |   2   |   1   | Suma |
+| ----- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | ---- |
+| Ej. 1 |   0   |   0   |   0   |   0   |   1   |   0   |   0   |   1   | 9    |
+| Ej. 2 |   1   |   1   |   0   |   0   |   1   |   1   |   0   |   0   | 204  |
 
 Como podemos observar, con palabras de 8 bit podemos representar un total de 2<sup>8</sup> (256) números, cuyo rango va de 0 a 255.
 
@@ -110,10 +109,10 @@ Con palabras de X bits podemos representar un total de 2<sup>X</sup> números, c
 ### Números de 8 bits (octetos)
 
 |   | 2<sup>7</sup> | 2<sup>6</sup> | 2<sup>5</sup> | 2<sup>4</sup> | 2<sup>3</sup> | 2<sup>2</sup> | 2<sup>1</sup> | 2<sup>0</sup> |   |
-|   | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | Suma |
-|---|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|---|
-| Ej. 1 |   |   |   |   |   |   |   |   | 60 |
-| Ej. 2 |   |   |   |   |   |   |   |   | 210 |
+|       |  128  |  64   |  32   |  16   |   8   |   4   |   2   |   1   | Suma |
+| ----- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | ---- |
+| Ej. 1 |       |       |       |       |       |       |       |       | 60   |
+| Ej. 2 |       |       |       |       |       |       |       |       | 210  |
 
 {:.question}
 ¿Se puede representar el número 315 con palabras de 8 bits? ¿Qué ocurre?
@@ -147,15 +146,15 @@ No. En base 2 (binario) solo hay dos dígitos, el 0 y el 1. ¡Empezamos a contar
 Los valores alfanuméricos en hexadecimal son 16: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F.
 
 | Hexadecimal | Binario | Hexadecimal | Binario |
-|:---:|:------:|:---:|:------:|
-| 0   | 0000   | 8   | 1000   |
-| 1   | 0001   | 9   | 1001   |
-| 2   | 0010   | A   | 1010   |
-| 3   | 0011   | B   | 1011   |
-| 4   | 0100   | C   | 1100   |
-| 5   | 0101   | D   | 1101   |
-| 6   | 0110   | E   | 1110   |
-| 7   | 0111   | F   | 1111   |
+| :---------: | :-----: | :---------: | :-----: |
+|      0      |  0000   |      8      |  1000   |
+|      1      |  0001   |      9      |  1001   |
+|      2      |  0010   |      A      |  1010   |
+|      3      |  0011   |      B      |  1011   |
+|      4      |  0100   |      C      |  1100   |
+|      5      |  0101   |      D      |  1101   |
+|      6      |  0110   |      E      |  1110   |
+|      7      |  0111   |      F      |  1111   |
 
 <iframe src="https://www.youtube.com/embed/Wx9X14aVfMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -186,3 +185,4 @@ Habría que responder a la pregunta, ¿Cuántos dígitos en binario necesito par
 - [Direcciones IPv6 – Convenciones y Formatos](https://ccnadesdecero.com/curso/ipv6-formatos-acortar-expandir/)
 - [Conversor de números decimales a binario](https://es.convertbinary.com/decimal-a-binario/)
 - [Conversor de binario a sistema decimal](https://es.convertbinary.com/binario-a-decimal/)
+- [BINARY GAME](https://learningcontent.cisco.com/games/binary/index.html)
