--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -8,6 +8,51 @@ img_path: /assets/img/cookies/
 
 ## Introducción
 
+Las cookies son unos pequeños ficheros, que se escribirán en una carpeta determinada en el ordenador del cliente. Estos ficheros te pueden permitir el grabar cierta información y que permanezca entre diferentes sesiones de trabajo de un usuario.
+
+Un uso muy típico de las cookies es usarlas para crear un sistema de carrito de la compra para tiendas online. De esta forma, se pueden almacenar productos que el usuario va seleccionando y cuando se realiza el pago se mostrará el total a pagar, junto con el listado de productos.
+
+<details class="card mb-2">
+  <summary class="card-header question">¿No es inseguro que el navegador acceda a la memoria secundaria del dispositivo a través de las cookies?
+</summary>
+  <div class="card-body" markdown="1">
+
+Permitir que algún programa pueda leer y escribir en el disco duro puede dar que pensar en un principio, pero el mecanismo de las cookies es algo más seguro, ya que no abre tu disco duro al mundo para que cualquiera pueda ver su contenido o modificarlo. Este mecanismo de las cookies proporciona acceso a un fichero, que está situado en un directorio especial del disco duro.
+
+En navegadores como Mozilla Firefox, el fichero de cookie se nombra como cookies.txt y está localizado en un directorio (cuyo nombre termina en .slt) dentro del perfil del navegador.
+
+En Windows, esa localización está en:
+
+```plaintext
+C:\\Windows\Application Data\Mozilla\Profiles\<profilename>\
+```
+
+y en Mac OSX en:
+
+```plaintext
+<user>/Library/Mozilla/Profiles/<profilename>/.
+```
+
+Google Chrome almacena las cookies en su base de datos SQLite en un fichero llamado Cookies dentro de:
+
+```plaintext
+<user>\Local Settings\Application Data\Google\Chrome\User Data\Default
+```
+
+Un fichero de cookies es un fichero de texto. El formato de almacenamiento de los datos en ese fichero dependerá del navegador. La estructura de ese fichero te dará igual ya que para acceder a las cookies lo vas a hacer a través de la propiedad `document.cookie`.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+> **¡Las cookies son específicas al dominio!** En otras palabras, si un dominio crea una cookie, otro dominio no podrá acceder a ella a través del navegador. La razón de ello es que muchas veces podremos almacenar datos importantes como usuarios/contraseñas en las cookies, y no queremos que otros dominios puedan consultarlos. La mayor parte de las veces, cuando almacenamos datos de este tipo, estarán encriptados dentro de la cookie.
+{:.prompt-info}
+
+> **Las cookies tendrán una fecha de caducidad**, ya que algunos navegadores tienen limitado el número máximo de cookies que pueden almacenar (1000 en Firefox). Será el propio navegador el encargado de borrar las cookies caducadas.
+{:.prompt-info}
+
+## Gestión y uso de cookies
+
 Mira el vídeo:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1PVH9EU_3Rs?si=Lix_F_sCY84xZ1rZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -17,7 +62,7 @@ Preguntas a responder tras la visualización del vídeo:
 1. ¿Cuál es la fecha de expiración por defecto de una cookie?
 1. ¿Se puede mantener una cookie entre diferentes sesiones?
 1. ¿Cómo se guarda una cookie?
-1. ¿Estas dos cookies son consideradas iguales o diferentes: `document.cookie = "usuario=mruizg; expires=Thu, 20 Jan 2100` `document.cookie = "usuario=mruizg` ?
+1. ¿Estas dos cookies son consideradas iguales o diferentes: `document.cookie = "usuario=mruizg; path=/` `document.cookie = "usuario=mruizg; path=/test` ?
 1. ¿Cómo sobreescribimos una cookie?
 1. ¿Cómo borramos una cookie?
 1. ¿Podemos borrar cookies desde el navegador directamente?
@@ -28,7 +73,9 @@ Mira el vídeo:
 
 Preguntas a responder tras la visualización del vídeo:
 
-1. 
+1. ¿Qué hace la línea `alert(document.cookie)`?
+1. ¿Qué devuelve la línea `event.target.id` si `event` objeto Event?
+1. ¿Estas dos cookies son consideradas iguales o diferentes: `document.cookie = "usuario=mruizg; expires=Thu, 20 Jan 2100` `document.cookie = "usuario=mruizg` ?
 
 Mira el vídeo:
 
@@ -36,8 +83,11 @@ Mira el vídeo:
 
 Preguntas a responder tras la visualización del vídeo:
 
-1. 
-
+1. ¿Podemos reutilizar las funciones para crear y borrar cookies?
+1. Si hacemos `let d = new Date()` que fecha habrá en `d`?
+1. ¿Qué hace la función `split()`?
+1. ¿Qué diferencia hay entre la función `alert()` y la función `prompt()`?
+1. ¿Qué funciones de las que escribe pueden servir para otros muchos proyectos que usen cookies?
 
 ## Bibliografía
 
