--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -1,5 +1,5 @@
 ---
-title: "¿Qué son las cookies?"
+title: "Gestión de cookies en JavaScript"
 date: 2024-06-23 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Web, Desarrollo Web en Entorno Cliente]
 tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, dwec, teoria]
@@ -17,9 +17,9 @@ Un uso muy típico de las cookies es usarlas para crear un sistema de carrito de
 </summary>
   <div class="card-body" markdown="1">
 
-Permitir que algún programa pueda leer y escribir en el disco duro puede dar que pensar en un principio, pero el mecanismo de las cookies es algo más seguro, ya que no abre tu disco duro al mundo para que cualquiera pueda ver su contenido o modificarlo. Este mecanismo de las cookies proporciona acceso a un fichero, que está situado en un directorio especial del disco duro.
+Permitir que algún programa pueda leer y escribir en el disco duro puede parecer inseguro en un principio, pero el mecanismo de las cookies no abre tu disco duro al mundo para que cualquiera pueda ver su contenido o modificarlo. Este mecanismo de las cookies proporciona acceso a un fichero, que está situado en un directorio especial del disco duro.
 
-En navegadores como Mozilla Firefox, el fichero de cookie se nombra como cookies.txt y está localizado en un directorio (cuyo nombre termina en .slt) dentro del perfil del navegador.
+En navegadores como Mozilla Firefox, el fichero de cookie se nombra como `cookies.txt` y está localizado en un directorio (cuyo nombre termina en `.slt`) dentro del perfil del navegador.
 
 En Windows, esa localización está en:
 
@@ -45,8 +45,14 @@ Un fichero de cookies es un fichero de texto. El formato de almacenamiento de lo
   </div>
 </details>
 
+{:.question}
+¿Cómo se pueden ver las cookies desde el navegador?
+
 > **¡Las cookies son específicas al dominio!** En otras palabras, si un dominio crea una cookie, otro dominio no podrá acceder a ella a través del navegador. La razón de ello es que muchas veces podremos almacenar datos importantes como usuarios/contraseñas en las cookies, y no queremos que otros dominios puedan consultarlos. La mayor parte de las veces, cuando almacenamos datos de este tipo, estarán encriptados dentro de la cookie.
 {:.prompt-info}
+
+{:.question}
+¿Puede una web acceder a las cookies de otra web?
 
 > **Las cookies tendrán una fecha de caducidad**, ya que algunos navegadores tienen limitado el número máximo de cookies que pueden almacenar (1000 en Firefox). Será el propio navegador el encargado de borrar las cookies caducadas.
 {:.prompt-info}
@@ -89,11 +95,15 @@ Preguntas a responder tras la visualización del vídeo:
 1. ¿Qué diferencia hay entre la función `alert()` y la función `prompt()`?
 1. ¿Qué funciones de las que escribe pueden servir para otros muchos proyectos que usen cookies?
 
+{:.question}
+¿Son las cookies malas?
+
+{:.question}
+¿Qué son las cookies de terceros?
+
+{:.question}
+¿Son las cookies de terceros malas?
+
 ## Bibliografía
 
-- [Lenguaje JS](https://lenguajejs.com/)
-- [Aprende X en Y minutos, Donde X=javascript](https://learnxinyminutes.com/docs/es-es/javascript-es/)
-- [Basics of Javascript](https://fwhibbit.es/basics-of-javascript)
-- [Comparación de funciones tradicionales con funciones flecha](https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Functions/Arrow_functions)
-- [JavaScript Asíncrono](https://jonmircha.com/javascript-asincrono)
-- https://alf.nu/RegexGolf?world=regex&level=r00
+- 
