--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -2,7 +2,7 @@
 title: "Gestión de cookies en JavaScript"
 date: 2024-06-23 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Web, Desarrollo Web en Entorno Cliente]
-tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, dwec, teoria]
+tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, dwec, teoria, cookies, javascript]
 img_path: /assets/img/cookies/
 ---
 
