--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -6,6 +6,7 @@ tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, d
 img_path: /assets/img/cookies/
 ---
 
+{:.section}
 ## Introducción
 
 Las cookies son unos pequeños ficheros, que se escribirán en una carpeta determinada en el ordenador del cliente. Estos ficheros te pueden permitir el grabar cierta información y que permanezca entre diferentes sesiones de trabajo de un usuario.
@@ -57,6 +58,7 @@ Un fichero de cookies es un fichero de texto. El formato de almacenamiento de lo
 > **Las cookies tendrán una fecha de caducidad**, ya que algunos navegadores tienen limitado el número máximo de cookies que pueden almacenar (1000 en Firefox). Será el propio navegador el encargado de borrar las cookies caducadas.
 {:.prompt-info}
 
+{:.section}
 ## Gestión y uso de cookies
 
 Mira el vídeo:
