--- a/_posts/2024-06-23-cookies.md
+++ b/_posts/2024-06-23-cookies.md
@@ -6,6 +6,20 @@ tags: [desarrollo de aplicaciones web, daw, desarrollo web en entorno cliente, d
 img_path: /assets/img/cookies/
 ---
 
+## Para debatir...
+
+{:.question}
+¿Qué crees que son las cookies?
+
+{:.question}
+¿Son las cookies malas?
+
+{:.question}
+¿Qué son las cookies de terceros?
+
+{:.question}
+¿Son las cookies de terceros malas?
+
 {:.section}
 ## Introducción
 
@@ -96,15 +110,6 @@ Preguntas a responder tras la visualización del vídeo:
 1. ¿Qué hace la función `split()`?
 1. ¿Qué diferencia hay entre la función `alert()` y la función `prompt()`?
 1. ¿Qué funciones de las que escribe pueden servir para otros muchos proyectos que usen cookies?
-
-{:.question}
-¿Son las cookies malas?
-
-{:.question}
-¿Qué son las cookies de terceros?
-
-{:.question}
-¿Son las cookies de terceros malas?
 
 ## Bibliografía
 
