--- a/_posts/2024-09-04-gestalt.md
+++ b/_posts/2024-09-04-gestalt.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/planificacion-interfaces-graficas/
 ---
 
+{:.subsection}
 ### Introducción
 
 Existe una teoría (psicología de la Gestalt) sobre la percepción que estudia la forma en que nuestro cerebro decodifica la información que recibe a través de diversas asociaciones que se producen en el momento de la percepción. Según esta teoría, la mente configura, a través de ciertas leyes, los elementos que le llegan a través de los canales sensoriales (percepción) o a través de la memoria (pensamiento, inteligencia y resolución de problemas).
@@ -34,6 +35,7 @@ Las personas dedicadas al diseño son comunicadores visuales por lo que deben co
 
 Cuando utilizamos imágenes para construir mensajes audiovisuales, debemos tener presente que con las imágenes sólo podemos comunicar las experiencias comunes.
 
+{:.section}
 ## Principios básicos de la Gestalt
 
 Los principios básicos de la Gestalt son:
@@ -46,8 +48,10 @@ Los principios básicos de la Gestalt son:
 
 En los subapartados siguientes veremos estos principios y su aplicación en el diseño de interfaces Web.
 
+{:.subsection}
 ### Principios de proximidad y de semejanza
 
+{:.subsubsection}
 #### Principio de proximidad
 
 Nuestra mente tiende a agrupar los elementos en función de la distancia que hay entre ellos.
@@ -64,6 +68,7 @@ La cercanía de los elementos del mismo tipo es percibida por el usuario como si
 
 Agrupamos todo lo que nos rodea por sus características similares. A las personas las agrupamos por su raza, religión, sexo, altura, color del pelo, clase social. También realizamos agrupamientos en el resto de los seres vivos: arbustos, vegetales, mamíferos, anfibios, etcétera y, en nuestras alacenas, tendemos a agrupar objetos según su funcionalidad: artículos de droguería, alimentación, jardinería, utensilios de cocina.
 
+{:.subsubsection}
 #### Principio de semejanza
 
 Nuestra mente tiende a agrupar aquellos elementos que son similares en su aspecto visual: forma, color, tamaño, etcétera
@@ -76,8 +81,10 @@ Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de una
 
 ![alt text](principioDeSemejanzaEjemplo.png)
 
+{:.subsection}
 ### Principios de simetría y de continuidad
 
+{:.subsubsection}
 #### Principio de simetría
 
 Nuestra mente tiende a percibir como un único elemento aquellos que están dispuestos simétricamente.
@@ -90,6 +97,7 @@ Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de la 
 
 ![alt text](principioDeSimetriaEjemplo.png)
 
+{:.subsubsection}
 #### Principio de continuidad
 
 Nuestra mente tiende a percibir los elementos continuos aunque estén interrumpidos entre sí.
@@ -102,8 +110,10 @@ Un ejemplo de la aplicación de este principio lo puedes ver en la imagen de la 
 
 ![alt text](principioDeContinuidadEjemplo.png)
 
+{:.subsection}
 ### Principios de cierre y de área o tamaño relativo
 
+{:.subsubsection}
 #### Principio de cierre
 
 Nuestra mente tiende a percibir figuras completas o cerradas a partir de contornos, incluso aunque éstos estén incompletos.
@@ -114,6 +124,7 @@ Un ejemplo de la aplicación de este principio lo puedes ver en las tres zonas e
 
 ![alt text](principioDeCierreEjemplo.png)
 
+{:.subsubsection}
 #### Principio de área o tamaño relativo
 
 Nuestra mente tiende a percibir como objeto el más pequeño de dos objetos que se superponen, percibiendo el objeto de mayor tamaño como fondo.
@@ -126,6 +137,7 @@ Un ejemplo de la aplicación de este principio lo puedes ver en las zonas enmarc
 
 ![alt text](principioDeAreaEjemplo.png)
 
+{:.subsection}
 ### Principio de figura-fondo
 
 Nuestra mente tiende a percibir ciertos elementos como figuras, con forma y borde, destacándolos del resto de los objetos que los envuelven (fondo).
@@ -138,6 +150,7 @@ Un ejemplo de la aplicación de principios es la imagen de la página de ISAIAH 
 
 ![alt text](principioDeFiguraEjemplo.png)
 
+{:.subsection}
 ### Ley de simplicidad, pregnancia o buena forma
 
 Nuestra mente tiende a percibir las formas más simples, facilitando así su recuerdo. Es un principio de organización de los elementos que componen una experiencia perceptiva, por el cual se reducen las ambigüedades o efectos distorsionadores, permitiéndonos centrarnos en un objeto separándolo del entorno con facilidad.
