--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/planificacion-interfaces-graficas/
 ---
 
+{:.section}
 ## Introducción
 
 Una misma página se puede ver de distinta forma según la plataforma, sistema operativo, navegador y monitor empleados.
@@ -37,6 +38,7 @@ Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
 > Si conoces una web útil para la generación de paletas de colores no dudes en compartirla en los comentarios de abajo.
 {:.prompt-info}
 
+{:.section}
 ## Sistema RGB
 
 El ojo humano percibe los colores: rojo, verde y azul y, el resto de los colores se consiguen con la adición de estos tres colores en diferentes proporciones. El blanco se consigue con la mezcla de los tres colores puros y se considera el negro como la ausencia de color. A estos colores se les llama colores aditivos y el ordenador se basa en este sistema para la representación de los colores dando lugar a lo que conocemos como Modo de color RGB. RGB es el acrónimo de los nombres de los colores rojo, verde y azul en inglés: Red, Green, Blue.
@@ -84,6 +86,7 @@ La empresa Pantone ha desarrollado el sistema Pantone Matching System (PMS) que 
   </div>
 </details>
 
+{:.section}
 ## Colores seguros
 
 Hay monitores que sólo permiten visualizar 256 colores. Hay navegadores que poseen una paleta de sólo 216 colores conocidos en el ámbito del diseño web como colores seguros. Emplear estos colores seguros es una forma de garantizar que nuestro sitio Web se verá del mismo modo en todos los navegadores.
@@ -94,10 +97,12 @@ Los colores seguros son los que se forman con las combinaciones de los tres colo
 
 La imagen se corresponde a la misma elección que vimos en la imagen de la página anterior de este mismo apartado, pero seleccionando esta vez los colores seguros de la Web en los enlaces de la barra superior izquierda. Puedes comprobar que todos los códigos hexadecimales se corresponden con los mencionados en el párrafo anterior.
 
+{:.section}
 ## Psicología del color
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/X8kbrAzV6BM?si=36BMIy8d8z-kghfJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+{:.section}
 ## Color en CSS
 
 A la hora de utilizar el color en CSS debemos conocer, al menos, 3 formas de definir colores a los elementos HTML:
