--- a/_posts/2024-09-04-gestalt.md
+++ b/_posts/2024-09-04-gestalt.md
@@ -6,8 +6,8 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/planificacion-interfaces-graficas/
 ---
 
-{:.subsection}
-### Introducción
+{:.section}
+## Introducción
 
 Existe una teoría (psicología de la Gestalt) sobre la percepción que estudia la forma en que nuestro cerebro decodifica la información que recibe a través de diversas asociaciones que se producen en el momento de la percepción. Según esta teoría, la mente configura, a través de ciertas leyes, los elementos que le llegan a través de los canales sensoriales (percepción) o a través de la memoria (pensamiento, inteligencia y resolución de problemas).
 
