--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -100,6 +100,8 @@ La imagen se corresponde a la misma elección que vimos en la imagen de la pági
 {:.section}
 ## Psicología del color
 
+La psicología del color es un campo de estudio que explora cómo los diferentes colores pueden influir en el comportamiento, las emociones y las decisiones de las personas. Aunque no es una ciencia exacta, se basa en la idea de que los colores pueden evocar reacciones emocionales o psicológicas específicas, y esta percepción puede variar según el contexto cultural, las experiencias personales y el entorno.
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/X8kbrAzV6BM?si=36BMIy8d8z-kghfJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {:.section}
