--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -31,9 +31,9 @@ Los colores están relacionados entre sí. La rueda de color formada por 12 colo
 
 Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
 
-- <https://paletton.com/>, es la que se usaremos en los siguientes ejemplos.
-- <https://coolors.co/>
 - <https://color.adobe.com/es/create/color-wheel>
+- <https://coolors.co/>
+- <https://paletton.com/>, es la que se usaremos en los siguientes ejemplos.
 
 > Si conoces una web útil para la generación de paletas de colores no dudes en compartirla en los comentarios de abajo.
 {:.prompt-info}
@@ -96,6 +96,9 @@ Los colores seguros son los que se forman con las combinaciones de los tres colo
 ![alt text](coloresSegurosEjemplo.png)
 
 La imagen se corresponde a la misma elección que vimos en la imagen de la página anterior de este mismo apartado, pero seleccionando esta vez los colores seguros de la Web en los enlaces de la barra superior izquierda. Puedes comprobar que todos los códigos hexadecimales se corresponden con los mencionados en el párrafo anterior.
+
+{:.quesiton}
+¿Qué significa sRGB?
 
 {:.section}
 ## Psicología del color
