--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -34,9 +34,45 @@ Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
 - <https://color.adobe.com/es/create/color-wheel>
 - <https://coolors.co/>
 - <https://paletton.com/>, es la que se usaremos en los siguientes ejemplos.
+- <https://www.learnui.design/tools/data-color-picker.html#single>
+- <https://palettte.app/>
+- <https://logongas.github.io/color-schemes-generator/>
+- <https://colorcolor.in/>, permite ajustar las curvas de saturación y luminosidad.
 
 > Si conoces una web útil para la generación de paletas de colores no dudes en compartirla en los comentarios de abajo.
 {:.prompt-info}
+
+{:.section}
+## Paletas de colores
+
+Necesitas más colores de los que piensas para no hacer cosas así:
+
+![alt text](colorMal.png)
+
+sino para hacer cosas así:
+
+![alt text](coloresBien.png)
+
+La gama de blancos y grises la usas para hacer las cosas muy claras u oscuras. La gama del color principal obviamente la usas para casi todo, mientras que la gama del color alternativo la usas para destacar algo. Por último, los colores rojo, verde, amarillo, etc, son para cosas concretas que necesitan ese color. Por ejemplo para avisar del borrado de algo usar el rojo.
+
+{:.section}
+## La luz viene del cielo
+
+Las cosas que están "encima" debe ser más claras que las que están abajo.
+
+![alt text](luzBienMal.png)
+_Luz mal y luz bien_
+
+{:.section}
+## Contraste de colores
+
+Al hacer un interfaz de usuario, jugar con dos colores que hagan contraste:
+
+![alt text](contrasteWeb.png)
+
+En la siguiente imagen se pueden ver la rueda de colores que hacen contraste:
+
+![alt text](warmColdColors.png)
 
 {:.section}
 ## Sistema RGB
@@ -115,6 +151,9 @@ A la hora de utilizar el color en CSS debemos conocer, al menos, 3 formas de def
 - Mediante palabras clave. Lee el artículo [Códigos de colores](https://lenguajecss.com/css/colores/codigos-color/).
 - Mediante la función RGB. Lee el artículo [La función RGB()](https://lenguajecss.com/css/colores/funcion-rgb/).
 - Mediante el formato hexadecimal. Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
+- Mediante el formato HSL. Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
+
+
 
 ## Bibliografía
 
