--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -13,7 +13,8 @@ Una misma página se puede ver de distinta forma según la plataforma, sistema o
 
 Los colores están relacionados entre sí. La rueda de color formada por 12 colores es una herramienta gráfica importante para crear combinaciones cromáticas y que nos permite hacer distintas clasificaciones de los colores:
 
-![](ruedaDelColor.png)
+![Rueda del color](ruedaDelColor.png)
+_Rueda del color_
 
 - Colores primarios, secundarios y terciarios.
   - Hay tres colores primarios: rojo, amarillo y azul, que están dispuestos en la rueda formando un triángulo equilátero.
@@ -48,10 +49,12 @@ Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
 Necesitas más colores de los que piensas para no hacer cosas así:
 
 ![alt text](colorMal.png)
+_Ejemplo de como NO usar el color_
 
 sino para hacer cosas así:
 
 ![alt text](coloresBien.png)
+_Ejemplo de como SI usar el color_
 
 La gama de blancos y grises la usas para hacer las cosas muy claras u oscuras. La gama del color principal obviamente la usas para casi todo, mientras que la gama del color alternativo la usas para destacar algo. Por último, los colores rojo, verde, amarillo, etc, son para cosas concretas que necesitan ese color. Por ejemplo para avisar del borrado de algo usar el rojo.
 
@@ -61,7 +64,7 @@ La gama de blancos y grises la usas para hacer las cosas muy claras u oscuras. L
 Las cosas que están "encima" debe ser más claras que las que están abajo.
 
 ![alt text](luzBienMal.png)
-_Luz mal y luz bien_
+_De izquierda a derecha, ejemplo de como NO usar la luz y de como SI usar la luz_
 
 {:.section}
 ## Contraste de colores
@@ -69,10 +72,12 @@ _Luz mal y luz bien_
 Al hacer un interfaz de usuario, jugar con dos colores que hagan contraste:
 
 ![alt text](contrasteWeb.png)
+_Web con buen uso del contraste_
 
 En la siguiente imagen se pueden ver la rueda de colores que hacen contraste:
 
 ![alt text](warmColdColors.png)
+_Rueda de colores según su calidez_
 
 {:.section}
 ## Sistema RGB
@@ -86,6 +91,7 @@ A la hora de representar cada color utilizamos este modelo RGB y lo podemos hace
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PElLB0pm5SQ?si=3fY5MW0Qyg3nl8_i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ![alt text](ejemploSistemaRGB.png)
+_Ejemplo con Color Scheme Designer_
 
 En la imagen anterior puedes ver las diferentes informaciones suministradas por la página web sobre esquemas de colores de diseño cuyo enlace tienes disponible en la página anterior de este mismo apartado. Se ha elegido en el sistema RGB una tríada compuesta por un color primario: el azul y los equidistantes a su color complementario. En la parte inferior de la imagen puedes ver los códigos hexadecimales correspondientes a cada combinación de color y, en la parte de la derecha de la imagen, sobre un fondo blanco, puedes ver la equivalencia en decimal de estos códigos hexadecimales.
 
@@ -130,6 +136,7 @@ Hay monitores que sólo permiten visualizar 256 colores. Hay navegadores que pos
 Los colores seguros son los que se forman con las combinaciones de los tres colores rojo, verde y azul pero sólo con los valores hexadecimales: 00, 33, 66, 99, CC y FF. Son seis grados distintos de cada color y por eso hay 216 colores en total ya que 216 es el resultado de multiplicar 6 x 6 x 6.
 
 ![alt text](coloresSegurosEjemplo.png)
+_Ejemplo de colores seguros_
 
 La imagen se corresponde a la misma elección que vimos en la imagen de la página anterior de este mismo apartado, pero seleccionando esta vez los colores seguros de la Web en los enlaces de la barra superior izquierda. Puedes comprobar que todos los códigos hexadecimales se corresponden con los mencionados en el párrafo anterior.
 
@@ -152,8 +159,6 @@ A la hora de utilizar el color en CSS debemos conocer, al menos, 3 formas de def
 - Mediante la función RGB. Lee el artículo [La función RGB()](https://lenguajecss.com/css/colores/funcion-rgb/).
 - Mediante el formato hexadecimal. Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
 - Mediante el formato HSL. Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
-
-
 
 ## Bibliografía
 
